Unreleased
==========

- Dropped support for Python 3.5.
- Dropped support for Django 1.11, 2.1 and 3.0.
- Add testing for Python 3.9.
- Add testing for Django 3.1 and 3.2.

0.9.3 - 2019-10-31
==================

- Add testing for Python 3.8.
- Fix broken migrations.

0.9.2 - 2019-10-27
==================

- Fix broken migration.

0.9.1 - 2019-10-27
==================

- Removed support for end-of-life Django 2.0.
- ``Calendar.slug`` is now unique.
- ``Event.rule`` and ``Event.creator`` foreign keys are now
  ``on_delete=models.SET_NULL``.

0.9.0 - 2019-10-04
==================

- Added support for Django 2.1, 2.2, and 3.0 and Python 3.7.
- Dropped support for Python 2.7 and 3.4.
- Added support for FullCalendar's use of the ``%Y-%m-%dT%H:%M:%S`` datetime
  format.
- Added the ``__hash__`` method to the ``Occurrence`` model to fix a crash when
  deleting objects with Django ≥ 2.2.

0.8.8 - 2018-01-14
==================

- Fixed dependencies to keep Django 1.11 support.
- ``Event.calendar`` is now ``null=True``. Existing ``Event`` objects without a
  calendar will be assigned to a calendar named "default".


0.8.7 - 2018-01-09
==================

- Added support for Django 2.0.
- Removed support for Django < 1.11.
- Removed support for end of life Python 3.3.
- Removed ``SCHEDULER_BASE_CLASSES`` setting.
- ``Calendar.slug`` is now ``unique=True``.
- To improve query performance, generic foreign keys are now ``db_index=True``.


0.8.6 - 2017-07-30
==================

- Fixed admin to use ``SCHEDULER_ADMIN_FIELDS`` for ``Calendar``.
- Fixed compatibility with dateutil 2.6.1.
- Added missing migration for the ``Calendar`` ``verbose_name`` option.


0.8.5 - 2017-06-25
==================

- Model fields of type ``CharField`` or ``TextField`` are now ``null=False``.
  Use an empty string, ``''``, to represent no data.
- ``feeds/atom.py`` has been removed. Use Django's syndication feed framework
  instead.