@@ -5,6 +5,7 @@ Unreleased
 - Dropped support for Django 1.11, 2.1 and 3.0.
 - Add testing for Python 3.9.
 - Add testing for Django 3.1 and 3.2.
+- Fix bug #508. Fullcalendar API filters cancelled occurrences.
 
 0.9.3 - 2019-10-31
 ==================
